--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Running</title>
     </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 <body>
   <div id="root"></div>
   <script src="./index.js"></script>
