--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 <body>
   <div id="root"></div>
-  <script src="./index.js"></script>
+  <script src="./index.tsx"></script>
 </body>
 </html>
